istio-configs/mtls-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls
  namespace: dev
spec:
  mtls:
    mode: STRICT
