istio-configs/retry-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tax-retry-policy
  namespace: dev
spec:
  hosts:
  - tax
  http:
  - route:
    - destination:
        host: tax
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,retriable-status-codes"
